Fix SplitButton spacing

--- a/src/components/Button/SplitButton/SplitButton.module.css
+++ b/src/components/Button/SplitButton/SplitButton.module.css
@@ -61,7 +61,7 @@
     gap: 0.3em;
 }
 
-.toggleButtonContainer:before {
+.toggleButton:before {
     content: "\00a0";
     border-left: 3px solid var(--primary-background-color, #222);
     border-radius: 0;
@@ -83,6 +83,7 @@
 
 .menuItem {
     width: 100%;
+    padding: 0.6em 0;
 }
 
 .menuItem:hover {
